Source/WebCore/html/HTMLTrackElement.h
@@ -68,9 +68,6 @@ public:
 
     const AtomicString& mediaElementCrossOriginAttribute() const;
 
-    bool hasBeenConfigured() const { return m_hasBeenConfigured; }
-    void setHasBeenConfigured(bool flag) { m_hasBeenConfigured = flag; }
-
 private:
     HTMLTrackElement(const QualifiedName&, Document*);
     virtual ~HTMLTrackElement();
@@ -101,7 +98,6 @@ private:
     virtual bool canLoadUrl(const KURL&);
 
     RefPtr<LoadableTextTrack> m_track;
-    bool m_hasBeenConfigured;
 };
 
 }
