Source/WebCore/html/track/TextTrack.h
@@ -116,6 +116,12 @@ public:
     bool isRendered();
     int trackIndexRelativeToRenderedTracks();
 
+    bool hasBeenConfigured() const { return m_hasBeenConfigured; }
+    void setHasBeenConfigured(bool flag) { m_hasBeenConfigured = flag; }
+
+    virtual bool isDefault() const { return false; }
+    virtual void setIsDefault(bool) { }
+
 protected:
     TextTrack(ScriptExecutionContext*, TextTrackClient*, const AtomicString& kind, const AtomicString& label, const AtomicString& language, TextTrackType);
 
@@ -134,6 +140,7 @@ private:
     int m_trackIndex;
     int m_renderedTrackIndex;
     bool m_showingByDefault;
+    bool m_hasBeenConfigured;
 };
 
 } // namespace WebCore
